--- a/Client/Default/imgui.ini
+++ b/Client/Default/imgui.ini
@@ -4,17 +4,22 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=673,24
+Pos=1085,27
 Size=550,680
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=15,28
+Pos=5,13
 Size=345,180
 Collapsed=0
 
 [Window][Example: Console]
 Pos=175,69
 Size=520,600
+Collapsed=0
+
+[Window][Another Window]
+Pos=38,178
+Size=198,71
 Collapsed=0
 
