--- a/Client/Default/imgui.ini
+++ b/Client/Default/imgui.ini
@@ -4,13 +4,13 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1085,27
-Size=550,680
+Pos=645,59
+Size=510,535
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=5,13
-Size=345,180
+Pos=72,200
+Size=375,203
 Collapsed=0
 
 [Window][Example: Console]
@@ -21,5 +21,60 @@ Collapsed=0
 [Window][Another Window]
 Pos=38,178
 Size=198,71
+Collapsed=0
+
+[Window][실행시간 모니터링]
+Pos=60,60
+Size=316,104
+Collapsed=0
+
+[Window][Execution Time Monitor]
+Pos=60,60
+Size=245,48
+Collapsed=0
+
+[Window][Execution-Time Monitor]
+Pos=45,90
+Size=331,102
+Collapsed=0
+
+[Window][SceneInfo]
+Pos=60,60
+Size=234,72
+Collapsed=0
+
+[Window][Example: Log]
+Pos=60,60
+Size=500,400
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=60,60
+Size=450,267
+Collapsed=0
+
+[Window][Dear ImGui Metrics]
+Pos=60,60
+Size=338,239
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=60,60
+Size=569,109
+Collapsed=0
+
+[Window][Mode Controller]
+Pos=10,10
+Size=46,32
+Collapsed=0
+
+[Window][test]
+Pos=18,161
+Size=32,35
+Collapsed=0
+
+[Window][Delete?]
+Pos=485,311
+Size=310,118
 Collapsed=0
 
