--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -4,13 +4,6 @@
     <Filter Include="00.MainApp">
       <UniqueIdentifier>{cc3f8290-d31c-4496-bd3d-335e0c624aba}</UniqueIdentifier>
     </Filter>
-    <Filter Include="99.Default">
-      <UniqueIdentifier>{d9a5f806-24c1-4792-bd7e-156e461f0101}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="99.Default\리소스 파일">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
     <Filter Include="21.World">
       <UniqueIdentifier>{b90dc1cb-774d-4bd5-82aa-9099aa3b6ecd}</UniqueIdentifier>
     </Filter>
@@ -53,44 +46,11 @@
     <Filter Include="90.Engine\01.Core\01.Scene">
       <UniqueIdentifier>{c18f5b3a-457a-4295-be0b-073d6d8c93cb}</UniqueIdentifier>
     </Filter>
-    <Filter Include="90.Engine\02.OOD">
-      <UniqueIdentifier>{6275ab4d-8655-4d16-9dcb-34306e8824b3}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="90.Engine\02.OOD\01.GameObject">
-      <UniqueIdentifier>{6bcb25c2-982f-4959-900b-bc36347a0b5c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="90.Engine\02.OOD\00.Scene">
-      <UniqueIdentifier>{dbe87bfc-64bc-4383-bbe4-fe5e2d634cfa}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="90.Engine\02.OOD\02.Component">
-      <UniqueIdentifier>{9050f6a5-f90d-4a72-9bc8-e10deeccc52f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="90.Engine\02.OOD\02.Component\00.Transform">
-      <UniqueIdentifier>{4813ae59-d619-40c5-b387-4f81ae85bfb2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="90.Engine\02.OOD\02.Component\Manager">
-      <UniqueIdentifier>{a8f0da47-c72c-4461-9733-e2194ace3431}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="90.Engine\02.OOD\02.Component\01.DynamicMesh">
-      <UniqueIdentifier>{f0948765-b713-408f-a41d-4f780fee116b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="90.Engine\02.OOD\02.Component\01.DynamicMesh\00.HierarchyLoader">
-      <UniqueIdentifier>{5c0b7b00-4815-4aa9-8075-a4a64f58dd84}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="90.Engine\02.OOD\02.Component\01.DynamicMesh\01.AnimationCtrl">
-      <UniqueIdentifier>{847cec0a-8c7e-41c1-8bce-804a614f602b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="90.Engine\02.OOD\02.Component\02.Renderer">
-      <UniqueIdentifier>{f6b149c6-198f-41bb-98cb-0787b11d20d2}</UniqueIdentifier>
-    </Filter>
     <Filter Include="21.World\00.OOD">
       <UniqueIdentifier>{3c5a4a5d-5e70-4e7c-9167-d9b7b13f3e23}</UniqueIdentifier>
     </Filter>
     <Filter Include="21.World\01.DOD">
       <UniqueIdentifier>{e9b77212-737f-408d-a829-79f2f4b5da12}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="90.Engine\03.DOD">
-      <UniqueIdentifier>{9797555a-5b42-4ada-97a9-2e36d70edff2}</UniqueIdentifier>
     </Filter>
     <Filter Include="90.Engine\01.Core\10.PipeLine">
       <UniqueIdentifier>{65dac24b-58bf-4fb9-9d52-8423ef1a25f7}</UniqueIdentifier>
@@ -101,20 +61,87 @@
     <Filter Include="External\00.DearImgui">
       <UniqueIdentifier>{883e0a26-e0a7-4fe2-b59c-5048e1d5298e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="98.Shader">
-      <UniqueIdentifier>{f95271ab-3778-402c-824e-204916060362}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="90.Engine\02.OOD\02.Component\03.Shader">
-      <UniqueIdentifier>{83f1750b-f00b-4c52-b122-70b72bbd0f38}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="90.Engine\02.OOD\01.GameObject\00.Bot">
-      <UniqueIdentifier>{9ca4b913-aa96-4393-a03c-b330d7959bb1}</UniqueIdentifier>
-    </Filter>
     <Filter Include="External\01.easy_profiler">
       <UniqueIdentifier>{734e477c-bd59-4a02-af13-bc5d8aa134de}</UniqueIdentifier>
     </Filter>
+    <Filter Include="22.Scene">
+      <UniqueIdentifier>{7111cf37-0e45-4f43-828f-870ea8d4df06}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="22.Scene\00.OOD">
+      <UniqueIdentifier>{2d7fc31f-6182-4863-bc0d-c67469270729}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="23.Object">
+      <UniqueIdentifier>{e2cfb538-f589-41cf-a957-866b504b6b11}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="23.Object\00.OOD">
+      <UniqueIdentifier>{f305b899-2507-44dc-a1da-82457d47f4c1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="23.Object\00.OOD\00.GameObject">
+      <UniqueIdentifier>{6bcb25c2-982f-4959-900b-bc36347a0b5c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="24.Component">
+      <UniqueIdentifier>{e13fd6a3-d7d4-4cb9-84e6-5a24e09e24b7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="24.Component\00.OOD">
+      <UniqueIdentifier>{18a30dec-c693-4fd4-88b9-58e65384db01}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="24.Component\00.OOD\00.Transform">
+      <UniqueIdentifier>{4813ae59-d619-40c5-b387-4f81ae85bfb2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="24.Component\00.OOD\Manager">
+      <UniqueIdentifier>{a8f0da47-c72c-4461-9733-e2194ace3431}</UniqueIdentifier>
+    </Filter>
     <Filter Include="External\01.easy_profiler\details">
-      <UniqueIdentifier>{e217d091-c943-403d-bd8c-b104e9844443}</UniqueIdentifier>
+      <UniqueIdentifier>{083a4173-24ea-43df-a85c-948fb17f44f9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="23.Object\00.OOD\00.GameObject\01.Bot">
+      <UniqueIdentifier>{9ca4b913-aa96-4393-a03c-b330d7959bb1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="23.Object\00.OOD\00.GameObject\00.Player">
+      <UniqueIdentifier>{27eecf0d-2792-4f8a-8c15-de920c307995}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="31.GameProfiler">
+      <UniqueIdentifier>{6409b55b-c0c6-4dcb-9810-92389d276397}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="30.ModeController">
+      <UniqueIdentifier>{64e20785-115a-41c3-8327-93ada3dff4bf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="99.Default">
+      <UniqueIdentifier>{d9a5f806-24c1-4792-bd7e-156e461f0101}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="99.Default\리소스 파일">
+      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
+      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    </Filter>
+    <Filter Include="97.Shader">
+      <UniqueIdentifier>{f95271ab-3778-402c-824e-204916060362}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="98.Headers">
+      <UniqueIdentifier>{3bdd3f4c-8edf-4ad0-8fc1-f9e9507ee4c7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="30.ModeController\00. GameMode">
+      <UniqueIdentifier>{73c1b7bb-e4a5-4078-8885-c7c7042cfce2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="30.ModeController\01. CreativeMode">
+      <UniqueIdentifier>{399cff84-4ae7-4653-ba77-507ff338bdcb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="24.Component\00.OOD\02.DynamicMesh">
+      <UniqueIdentifier>{f0948765-b713-408f-a41d-4f780fee116b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="24.Component\00.OOD\02.DynamicMesh\00.HierarchyLoader">
+      <UniqueIdentifier>{5c0b7b00-4815-4aa9-8075-a4a64f58dd84}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="24.Component\00.OOD\02.DynamicMesh\01.AnimationCtrl">
+      <UniqueIdentifier>{847cec0a-8c7e-41c1-8bce-804a614f602b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="24.Component\00.OOD\03.Renderer">
+      <UniqueIdentifier>{f6b149c6-198f-41bb-98cb-0787b11d20d2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="24.Component\00.OOD\04.Shader">
+      <UniqueIdentifier>{83f1750b-f00b-4c52-b122-70b72bbd0f38}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="24.Component\00.OOD\01.StaticMesh">
+      <UniqueIdentifier>{5f21c9b6-1e43-4c72-89e6-522c39c9e3d2}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -165,34 +192,28 @@
       <Filter>90.Engine\01.Core\00.World</Filter>
     </ClCompile>
     <ClCompile Include="..\Codes\GameObject.cpp">
-      <Filter>90.Engine\02.OOD\01.GameObject</Filter>
+      <Filter>23.Object\00.OOD\00.GameObject</Filter>
     </ClCompile>
     <ClCompile Include="..\Codes\Scene.cpp">
       <Filter>90.Engine\01.Core\01.Scene</Filter>
     </ClCompile>
-    <ClCompile Include="Scene_Object.cpp">
-      <Filter>90.Engine\02.OOD\00.Scene</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Codes\Component_Object.cpp">
-      <Filter>90.Engine\02.OOD\02.Component</Filter>
-    </ClCompile>
     <ClCompile Include="..\Codes\Transform_Object.cpp">
-      <Filter>90.Engine\02.OOD\02.Component\00.Transform</Filter>
+      <Filter>24.Component\00.OOD\00.Transform</Filter>
     </ClCompile>
     <ClCompile Include="..\Codes\DynamicMesh_Object.cpp">
-      <Filter>90.Engine\02.OOD\02.Component\01.DynamicMesh</Filter>
+      <Filter>24.Component\00.OOD\02.DynamicMesh</Filter>
     </ClCompile>
     <ClCompile Include="..\Codes\HierarchyLoader.cpp">
-      <Filter>90.Engine\02.OOD\02.Component\01.DynamicMesh\00.HierarchyLoader</Filter>
+      <Filter>24.Component\00.OOD\02.DynamicMesh\00.HierarchyLoader</Filter>
     </ClCompile>
     <ClCompile Include="..\Codes\AnimationCtrl.cpp">
-      <Filter>90.Engine\02.OOD\02.Component\01.DynamicMesh\01.AnimationCtrl</Filter>
+      <Filter>24.Component\00.OOD\02.DynamicMesh\01.AnimationCtrl</Filter>
     </ClCompile>
     <ClCompile Include="..\Codes\ComponentManager_Object.cpp">
-      <Filter>90.Engine\02.OOD\02.Component\Manager</Filter>
+      <Filter>24.Component\00.OOD\Manager</Filter>
     </ClCompile>
     <ClCompile Include="..\Codes\Renderer_Object.cpp">
-      <Filter>90.Engine\02.OOD\02.Component\02.Renderer</Filter>
+      <Filter>24.Component\00.OOD\03.Renderer</Filter>
     </ClCompile>
     <ClCompile Include="..\Codes\World_Object.cpp">
       <Filter>21.World\00.OOD</Filter>
@@ -201,7 +222,7 @@
       <Filter>90.Engine\01.Core\10.PipeLine</Filter>
     </ClCompile>
     <ClCompile Include="..\Codes\Bot.cpp">
-      <Filter>90.Engine\02.OOD\01.GameObject\00.Bot</Filter>
+      <Filter>23.Object\00.OOD\00.GameObject\01.Bot</Filter>
     </ClCompile>
     <ClCompile Include="..\External\DearImgui\imgui.cpp">
       <Filter>External\00.DearImgui</Filter>
@@ -222,7 +243,28 @@
       <Filter>External\00.DearImgui</Filter>
     </ClCompile>
     <ClCompile Include="Shader.cpp">
-      <Filter>90.Engine\02.OOD\02.Component\03.Shader</Filter>
+      <Filter>24.Component\00.OOD\04.Shader</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene_Object.cpp">
+      <Filter>22.Scene\00.OOD</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Codes\Component_Object.cpp">
+      <Filter>24.Component\00.OOD</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Codes\Player.cpp">
+      <Filter>23.Object\00.OOD\00.GameObject\00.Player</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Codes\CreativeMode.cpp">
+      <Filter>30.ModeController\01. CreativeMode</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Codes\ModeController.cpp">
+      <Filter>30.ModeController</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Codes\KObject.cpp">
+      <Filter>23.Object\00.OOD</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Codes\StaticMesh_Object.cpp">
+      <Filter>24.Component\00.OOD\01.StaticMesh</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -281,37 +323,31 @@
       <Filter>90.Engine\01.Core\00.World</Filter>
     </ClInclude>
     <ClInclude Include="..\Headers\GameObject.h">
-      <Filter>90.Engine\02.OOD\01.GameObject</Filter>
+      <Filter>23.Object\00.OOD\00.GameObject</Filter>
     </ClInclude>
     <ClInclude Include="..\Headers\Scene.h">
       <Filter>90.Engine\01.Core\01.Scene</Filter>
     </ClInclude>
-    <ClInclude Include="Scene_Object.h">
-      <Filter>90.Engine\02.OOD\00.Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Headers\Component_Object.h">
-      <Filter>90.Engine\02.OOD\02.Component</Filter>
-    </ClInclude>
     <ClInclude Include="..\Headers\Transform_Object.h">
-      <Filter>90.Engine\02.OOD\02.Component\00.Transform</Filter>
+      <Filter>24.Component\00.OOD\00.Transform</Filter>
     </ClInclude>
     <ClInclude Include="..\Headers\DynamicMesh_Object.h">
-      <Filter>90.Engine\02.OOD\02.Component\01.DynamicMesh</Filter>
+      <Filter>24.Component\00.OOD\02.DynamicMesh</Filter>
     </ClInclude>
     <ClInclude Include="..\Headers\HierarchyLoader.h">
-      <Filter>90.Engine\02.OOD\02.Component\01.DynamicMesh\00.HierarchyLoader</Filter>
+      <Filter>24.Component\00.OOD\02.DynamicMesh\00.HierarchyLoader</Filter>
     </ClInclude>
     <ClInclude Include="..\Headers\Struct.h">
       <Filter>90.Engine\98.Headers</Filter>
     </ClInclude>
     <ClInclude Include="..\Headers\AnimationCtrl.h">
-      <Filter>90.Engine\02.OOD\02.Component\01.DynamicMesh\01.AnimationCtrl</Filter>
+      <Filter>24.Component\00.OOD\02.DynamicMesh\01.AnimationCtrl</Filter>
     </ClInclude>
     <ClInclude Include="..\Headers\ComponentManager_Object.h">
-      <Filter>90.Engine\02.OOD\02.Component\Manager</Filter>
+      <Filter>24.Component\00.OOD\Manager</Filter>
     </ClInclude>
     <ClInclude Include="..\Headers\Renderer_Object.h">
-      <Filter>90.Engine\02.OOD\02.Component\02.Renderer</Filter>
+      <Filter>24.Component\00.OOD\03.Renderer</Filter>
     </ClInclude>
     <ClInclude Include="..\Headers\World_Object.h">
       <Filter>21.World\00.OOD</Filter>
@@ -320,7 +356,7 @@
       <Filter>90.Engine\01.Core\10.PipeLine</Filter>
     </ClInclude>
     <ClInclude Include="..\Headers\Bot.h">
-      <Filter>90.Engine\02.OOD\01.GameObject\00.Bot</Filter>
+      <Filter>23.Object\00.OOD\00.GameObject\01.Bot</Filter>
     </ClInclude>
     <ClInclude Include="..\External\DearImgui\imconfig.h">
       <Filter>External\00.DearImgui</Filter>
@@ -347,55 +383,79 @@
       <Filter>External\00.DearImgui</Filter>
     </ClInclude>
     <ClInclude Include="Shader.h">
-      <Filter>90.Engine\02.OOD\02.Component\03.Shader</Filter>
+      <Filter>24.Component\00.OOD\04.Shader</Filter>
     </ClInclude>
-    <ClInclude Include="..\External\easy_profiler\arbitrary_value.h">
+    <ClInclude Include="Scene_Object.h">
+      <Filter>22.Scene\00.OOD</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Headers\Component_Object.h">
+      <Filter>24.Component\00.OOD</Filter>
+    </ClInclude>
+    <ClInclude Include="..\External\easy_profiler\easy\arbitrary_value.h">
       <Filter>External\01.easy_profiler</Filter>
     </ClInclude>
-    <ClInclude Include="..\External\easy_profiler\easy_net.h">
+    <ClInclude Include="..\External\easy_profiler\easy\easy_net.h">
       <Filter>External\01.easy_profiler</Filter>
     </ClInclude>
-    <ClInclude Include="..\External\easy_profiler\easy_protocol.h">
+    <ClInclude Include="..\External\easy_profiler\easy\easy_protocol.h">
       <Filter>External\01.easy_profiler</Filter>
     </ClInclude>
-    <ClInclude Include="..\External\easy_profiler\easy_socket.h">
+    <ClInclude Include="..\External\easy_profiler\easy\easy_socket.h">
       <Filter>External\01.easy_profiler</Filter>
     </ClInclude>
-    <ClInclude Include="..\External\easy_profiler\profiler.h">
+    <ClInclude Include="..\External\easy_profiler\easy\profiler.h">
       <Filter>External\01.easy_profiler</Filter>
     </ClInclude>
-    <ClInclude Include="..\External\easy_profiler\reader.h">
+    <ClInclude Include="..\External\easy_profiler\easy\reader.h">
       <Filter>External\01.easy_profiler</Filter>
     </ClInclude>
-    <ClInclude Include="..\External\easy_profiler\serialized_block.h">
+    <ClInclude Include="..\External\easy_profiler\easy\serialized_block.h">
       <Filter>External\01.easy_profiler</Filter>
     </ClInclude>
-    <ClInclude Include="..\External\easy_profiler\utility.h">
+    <ClInclude Include="..\External\easy_profiler\easy\utility.h">
       <Filter>External\01.easy_profiler</Filter>
     </ClInclude>
-    <ClInclude Include="..\External\easy_profiler\writer.h">
+    <ClInclude Include="..\External\easy_profiler\easy\writer.h">
       <Filter>External\01.easy_profiler</Filter>
     </ClInclude>
-    <ClInclude Include="..\External\easy_profiler\details\arbitrary_value_aux.h">
+    <ClInclude Include="..\External\easy_profiler\easy\details\arbitrary_value_aux.h">
       <Filter>External\01.easy_profiler\details</Filter>
     </ClInclude>
-    <ClInclude Include="..\External\easy_profiler\details\arbitrary_value_public_types.h">
+    <ClInclude Include="..\External\easy_profiler\easy\details\arbitrary_value_public_types.h">
       <Filter>External\01.easy_profiler\details</Filter>
     </ClInclude>
-    <ClInclude Include="..\External\easy_profiler\details\easy_compiler_support.h">
+    <ClInclude Include="..\External\easy_profiler\easy\details\easy_compiler_support.h">
       <Filter>External\01.easy_profiler\details</Filter>
     </ClInclude>
-    <ClInclude Include="..\External\easy_profiler\details\profiler_aux.h">
+    <ClInclude Include="..\External\easy_profiler\easy\details\profiler_aux.h">
       <Filter>External\01.easy_profiler\details</Filter>
     </ClInclude>
-    <ClInclude Include="..\External\easy_profiler\details\profiler_colors.h">
+    <ClInclude Include="..\External\easy_profiler\easy\details\profiler_colors.h">
       <Filter>External\01.easy_profiler\details</Filter>
     </ClInclude>
-    <ClInclude Include="..\External\easy_profiler\details\profiler_in_use.h">
+    <ClInclude Include="..\External\easy_profiler\easy\details\profiler_in_use.h">
       <Filter>External\01.easy_profiler\details</Filter>
     </ClInclude>
-    <ClInclude Include="..\External\easy_profiler\details\profiler_public_types.h">
+    <ClInclude Include="..\External\easy_profiler\easy\details\profiler_public_types.h">
       <Filter>External\01.easy_profiler\details</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Headers\Player.h">
+      <Filter>23.Object\00.OOD\00.GameObject\00.Player</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Headers\Client_Defines.h">
+      <Filter>98.Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Headers\CreativeMode.h">
+      <Filter>30.ModeController\01. CreativeMode</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Headers\ModeController.h">
+      <Filter>30.ModeController</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Headers\KObject.h">
+      <Filter>23.Object\00.OOD</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Headers\StaticMesh_Object.h">
+      <Filter>24.Component\00.OOD\01.StaticMesh</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -405,7 +465,7 @@
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="..\Shader\HardwareSkinning.fx">
-      <Filter>98.Shader</Filter>
+      <Filter>97.Shader</Filter>
     </FxCompile>
   </ItemGroup>
 </Project>
