Succeed: File Selector UI

--- a/Client/Default/imgui.ini
+++ b/Client/Default/imgui.ini
@@ -6,7 +6,7 @@ Collapsed=0
 [Window][Dear ImGui Demo]
 Pos=767,12
 Size=510,535
-Collapsed=1
+Collapsed=0
 
 [Window][Hello, world!]
 Pos=72,200
@@ -76,5 +76,15 @@ Collapsed=0
 [Window][Delete?]
 Pos=485,311
 Size=310,118
+Collapsed=0
+
+[Window][Title bar Hovered/Active tests]
+Pos=60,60
+Size=471,61
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=60,60
+Size=621,734
 Collapsed=0
 
